--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
      display:grid;
      grid-template-columns: 250px 250px;
      grid-gap: 20px;
-     grid-template-rows: 200px 200px;
+     /* grid-template-rows: 200px 200px; */
+     grid-auto-rows: minmax(200px, auto);
 }
 
 
@@ -68,4 +69,31 @@ html, body {
     content: '4';
   }
 
+  .grid-item-5::after {
+    content: '5';
+  }
+  
+  .grid-item-6::after {
+    content: '6';
+  }
+  
+  .grid-item-7::after {
+    content: '7';
+  }
+  
+  .grid-item-8::after {
+    content: '8';
+  }
+  
+  .grid-item-9::after {
+    content: '9';
+  }
+  
+  .grid-item-10::after {
+    content: '10';
+  }
+  
+  .grid-item-11::after {
+    content: '11';
+  }
 
